--- a/index.html
+++ b/index.html
@@ -1,52 +1,38 @@
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>LIGHTBOX EXAMPLE</title>
-		<script src="lightbox.js"></script>
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<div class= "images">
-		<a href = "javascript:showLight(0)"><img id="imgsrc0" class = "thumb" src='BSDThumb.jpg'></a>
-		<a href = "javascript:showLight(1)"><img id="imgsrc1" class = "thumb" src='AppleThumb.jpg'></a>
-		<a href = "javascript:showLight(2)"><img id="imgsrc2" class = "thumb" src='LinuxThumb.jpg'></a>
-		<a href = "javascript:showLight(3)"><img id="imgsrc3" class = "thumb" src='WindowsThumb.jpg'></a>
-		</div>		
+<head>
+<meta charset="utf-8"> 
+<title>My Little Bakery</title>
+
+
+<link rel="stylesheet" type="text/css" href="stylesheet.css" />
+</head>
+<body>
+<div style="text-align: center">
+	<img src="banner.png" width="1200" height="259" alt="logo" style="box-shadow: 5px 5px  
+	#b92164" />
+</div>
+
+<br />
+<header> Lets Design A Cake! </header>
+
+<br />
+
+<table>
+
+	<tr>
+		<td></td>
+		<td><P style="text-align: center"> 1.) Step One Lets Pick A Shape! </p></td>
 		
-		   
-    	<div id="light" class="light_content">
-			<div id="wrapper">
-   				<!-- Begin Header -->
-				<div id="header">
-					<div class="leftCol">
-					</div>
-
-					<div class="rightCol">
-						<a href = "JavaScript:hideLight()" >Close</a>
-					</div>
-				</div>
-				<!-- End Header -->
-				<div id="content">
-						<img class="fullSize" src="BSD.jpg" name="slideImage">						
-		 		</div>
-				<!-- End Content -->
-				
-				<!-- Begin Footer -->
-				<div id="footer">
-					<div class="leftCol">
-						<a href = "JavaScript:previousImage()" ><<</a>
-					</div>
-
-					<div class="rightCol">
-						<a href = "JavaScript:nextImage()" >>></a>
-					</div>
-				</div>
-				<!-- End Footer -->
-		 
-			</div>
-			<!-- End Wrapper -->
-		</div>	
-		<div id="fade" class="black_overlay">
-		</div>
+	</tr>
 	
-	</body>
+	<tr>
+		<td> <a href="round.html"><img src="1round.png" width="300" height="200" alt="Round Layer"></a></td>
+		<td> <a href="square.html"><img src="1square.png" width="300" height="200" alt="Square Layer"></a></td>
+		<td> <a href="hexagon.html"><img src="1HEX.png" width="300" height="200" alt="Hexagon Layer"></a></td>
+	</tr>
+	
+</table>
+</body>
 </html>
+
